Started development of 1.1.0, potential fix for lifecycle owner crash on Huawei devices, guard against API responses on secondary sources, accessibility improvements to theme selector

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         targetSdkVersion buildConfig.targetSdk
 
         applicationId "com.jorkoh.transportezaragozakt"
-        versionCode 16
-        versionName "1.0.9"
+        versionCode 17
+        versionName "1.1.0-dev"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
