Added rural trackings selector for the map to quickly find and zoom into specific rural trackings. Improved filter chips state readability. Introduced some changes to clustering system to fix rendering bug when swapping filters too quickly

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     implementation deps.material_dialogs.core
     implementation deps.material_dialogs.input
     implementation deps.material_dialogs.color
+    implementation deps.material_dialogs.bottom_sheets
     implementation project(':datetime')
 
     //Quick Permissions
