--- a/build.gradle
+++ b/build.gradle
@@ -52,9 +52,10 @@ buildscript {
             'zxing'                : "com.journeyapps:zxing-android-embedded:3.6.0",
             'viewpagerdots'        : "com.afollestad:viewpagerdots:1.0.0",
             'material_dialogs'     : [
-                    'core' : 'com.afollestad.material-dialogs:core:3.0.0-beta2',
-                    'input': 'com.afollestad.material-dialogs:input:3.0.0-beta2',
-                    'color': 'com.afollestad.material-dialogs:color:3.0.0-beta2'
+                    'core' : 'com.afollestad.material-dialogs:core:3.1.1',
+                    'input': 'com.afollestad.material-dialogs:input:3.1.1',
+                    'color': 'com.afollestad.material-dialogs:color:3.1.1',
+                    'bottom_sheets': 'com.afollestad.material-dialogs:bottomsheets:3.1.1'
             ],
             'retrofit'             : [
                     'retrofit'       : 'com.squareup.retrofit2:retrofit:2.6.1',
