--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,9 @@ buildscript {
                             'coroutines': "androidx.room:room-coroutines:2.1.0-alpha04"
                     ],
                     'navigation'      : [
-                            'runtime' : "androidx.navigation:navigation-runtime-ktx:2.1.0-alpha05",
-                            'fragment': "androidx.navigation:navigation-fragment-ktx:2.1.0-alpha05",
-                            'ui'      : "androidx.navigation:navigation-ui-ktx:2.1.0-alpha05"
+                            'runtime' : "androidx.navigation:navigation-runtime-ktx:2.2.0-alpha01",
+                            'fragment': "androidx.navigation:navigation-fragment-ktx:2.2.0-alpha01",
+                            'ui'      : "androidx.navigation:navigation-ui-ktx:2.2.0-alpha01"
                     ],
                     'lifecycle'       : [
                             'extensions': "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01",
@@ -102,7 +102,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${buildConfig.gradlePlugin}"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-alpha02"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-beta01"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.50"
         classpath 'com.google.gms:google-services:4.3.2'
