--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         targetSdkVersion buildConfig.targetSdk
 
         applicationId "com.jorkoh.transportezaragozakt"
-        versionCode 18
-        versionName "1.1.0"
+        versionCode 19
+        versionName "1.1.1-dev"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
