--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         targetSdkVersion buildConfig.targetSdk
 
         applicationId "com.jorkoh.transportezaragozakt"
-        versionCode 20
-        versionName "1.1.1"
+        versionCode 21
+        versionName "1.1.2-dev"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
