--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,19 @@ buildscript {
             compileSdk  : 28,
             targetSdk   : 28,
             minSdk      : 21,
-            gradlePlugin: '3.5.0'
+            gradlePlugin: '3.5.1'
     ]
 
     ext.deps = [
             'androidx'             : [
-                    'appCompat'       : "androidx.appcompat:appcompat:1.1.0-beta01",
+                    'appCompat'       : "androidx.appcompat:appcompat:1.1.0",
                     'constraintLayout': "androidx.constraintlayout:constraintlayout:2.0.0-beta1",
                     'cardView'        : "androidx.cardview:cardview:1.0.0",
-                    'preference'      : "androidx.preference:preference:1.1.0-beta01",
-                    'recyclerView'    : "androidx.recyclerview:recyclerview:1.1.0-alpha06",
+                    'preference'      : "androidx.preference:preference:1.1.0",
+                    'recyclerView'    : "androidx.recyclerview:recyclerview:1.1.0-rc01",
                     'viewPager'       : "androidx.viewpager:viewpager:1.0.0",
                     'annotation'      : "androidx.annotation:annotation:1.1.0",
-                    'core'            : "androidx.core:core-ktx:1.2.0-alpha02",
+                    'core'            : "androidx.core:core-ktx:1.2.0-beta01",
                     'test'            : "androidx.test:core-ktx:1.2.1-alpha01",
                     'jUnitRunner'     : "androidx.test.ext:junit-ktx:1.1.1-beta01",
                     'espresso'        : [
@@ -24,37 +24,38 @@ buildscript {
                     ],
                     'legacy'          : "androidx.legacy:legacy-support-v4:1.0.0",
                     'room'            : [
-                            'runtime'   : "androidx.room:room-runtime:2.1.0",
-                            'compiler'  : "androidx.room:room-compiler:2.1.0-alpha07",
-                            'coroutines': "androidx.room:room-coroutines:2.1.0-alpha04"
+                            'runtime' : "androidx.room:room-runtime:2.2.1",
+                            'compiler': "androidx.room:room-compiler:2.2.1",
+                            'ktx'     : "androidx.room:room-ktx:2.2.1"
                     ],
                     'navigation'      : [
-                            'runtime' : "androidx.navigation:navigation-runtime-ktx:2.2.0-alpha01",
-                            'fragment': "androidx.navigation:navigation-fragment-ktx:2.2.0-alpha01",
-                            'ui'      : "androidx.navigation:navigation-ui-ktx:2.2.0-alpha01"
+                            'runtime' : "androidx.navigation:navigation-runtime-ktx:2.2.0-rc01",
+                            'fragment': "androidx.navigation:navigation-fragment-ktx:2.2.0-rc01",
+                            'ui'      : "androidx.navigation:navigation-ui-ktx:2.2.0-rc01"
                     ],
                     'lifecycle'       : [
-                            'extensions': "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01",
-                            'viewmodel' : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01"
+                            'extensions': "androidx.lifecycle:lifecycle-extensions:2.2.0-rc01",
+                            'viewModel' : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc01",
+                            'liveData'  : "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc01"
                     ]
             ],
             'kotlin'               : [
                     'stdlib': [
-                            'jdk': "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.41"
+                            'jdk': "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
                     ]
             ],
+            'coroutines'           : "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2",
             'material'             : "com.google.android.material:material:1.1.0-alpha06",
             'playServices'         : [
                     'maps'    : "com.google.android.gms:play-services-maps:16.1.0",
                     'location': "com.google.android.gms:play-services-location:17.0.0"
             ],
-            'maps_utils'           : "com.google.maps.android:android-maps-utils:0.5",
             'zxing'                : "com.journeyapps:zxing-android-embedded:3.6.0",
             'viewpagerdots'        : "com.afollestad:viewpagerdots:1.0.0",
             'material_dialogs'     : [
-                    'core' : 'com.afollestad.material-dialogs:core:3.1.1',
-                    'input': 'com.afollestad.material-dialogs:input:3.1.1',
-                    'color': 'com.afollestad.material-dialogs:color:3.1.1',
+                    'core'         : 'com.afollestad.material-dialogs:core:3.1.1',
+                    'input'        : 'com.afollestad.material-dialogs:input:3.1.1',
+                    'color'        : 'com.afollestad.material-dialogs:color:3.1.1',
                     'bottom_sheets': 'com.afollestad.material-dialogs:bottomsheets:3.1.1'
             ],
             'retrofit'             : [
@@ -79,7 +80,7 @@ buildscript {
             'junit'                : "junit:junit:4.12",
             'mockito'              : "org.mockito:mockito-core:2.8.9",
             'kotlinx_serialization': "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.10.0",
-            'workmanager'          : "androidx.work:work-runtime-ktx:2.3.0-alpha01",
+            'workmanager'          : "androidx.work:work-runtime-ktx:2.3.0-alpha03",
             'koin'                 : [
                     'core': "org.koin:koin-androidx-viewmodel:2.0.1",
                     'test': "org.koin:koin-test:2.0.1"
@@ -90,7 +91,7 @@ buildscript {
             'nullaway'             : "com.uber.nullaway:nullaway:0.6.6",
             'firebase'             : "com.google.firebase:firebase-core:17.0.0",
             'crashlytics'          : "com.crashlytics.sdk.android:crashlytics:2.10.1",
-            'leakcanary'           : "com.squareup.leakcanary:leakcanary-android:2.0-beta-2"
+            'leakcanary'           : "com.squareup.leakcanary:leakcanary-android:2.0-beta-3"
     ]
 
     repositories {
@@ -102,7 +103,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${buildConfig.gradlePlugin}"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-beta01"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-rc01"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.50"
         classpath 'com.google.gms:google-services:4.3.2'
