Fixed a bunch of issues with the shared elements transition, bottom navigation can't be animated with the Transitions API at the same time as the other elements without causing issues. Updated multiple dependencies, upped compile and targetSdk to 29 and minor cleanup

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     //Androidx
     implementation deps.material
     implementation deps.coroutines
+    implementation deps.androidx.transition
     implementation deps.androidx.appCompat
     implementation deps.androidx.constraintLayout
     implementation deps.androidx.recyclerView
