--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,22 @@
 buildscript {
     ext.buildConfig = [
-            compileSdk  : 28,
-            targetSdk   : 28,
+            compileSdk  : 29,
+            targetSdk   : 29,
             minSdk      : 21,
             gradlePlugin: '3.5.3'
     ]
 
     ext.deps = [
             'androidx'             : [
-                    'appCompat'       : "androidx.appcompat:appcompat:1.1.0",
-                    'constraintLayout': "androidx.constraintlayout:constraintlayout:2.0.0-beta1",
+                    'appCompat'       : "androidx.appcompat:appcompat:1.2.0-alpha01",
+                    'constraintLayout': "androidx.constraintlayout:constraintlayout:2.0.0-beta4",
                     'cardView'        : "androidx.cardview:cardview:1.0.0",
                     'preference'      : "androidx.preference:preference:1.1.0",
                     'recyclerView'    : "androidx.recyclerview:recyclerview:1.1.0-rc01",
                     'viewPager'       : "androidx.viewpager:viewpager:1.0.0",
                     'annotation'      : "androidx.annotation:annotation:1.1.0",
-                    'core'            : "androidx.core:core-ktx:1.2.0-beta01",
+                    'core'            : "androidx.core:core-ktx:1.2.0-rc01",
+                    'transition'      : "androidx.transition:transition:1.3.0-rc02",
                     'test'            : "androidx.test:core-ktx:1.2.1-alpha01",
                     'jUnitRunner'     : "androidx.test.ext:junit-ktx:1.1.1-beta01",
                     'espresso'        : [
@@ -41,11 +42,11 @@ buildscript {
             ],
             'kotlin'               : [
                     'stdlib': [
-                            'jdk': "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.50"
+                            'jdk': "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
                     ]
             ],
             'coroutines'           : "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2",
-            'material'             : "com.google.android.material:material:1.1.0-alpha06",
+            'material'             : "com.google.android.material:material:1.2.0-alpha03",
             'playServices'         : [
                     'maps'    : "com.google.android.gms:play-services-maps:16.1.0",
                     'location': "com.google.android.gms:play-services-location:17.0.0"
@@ -107,10 +108,10 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${buildConfig.gradlePlugin}"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-rc01"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.50"
-        classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.50"
-        classpath 'com.google.gms:google-services:4.3.2'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.2.0-rc04"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.61"
+        classpath 'com.google.gms:google-services:4.3.3'
         classpath 'io.fabric.tools:gradle:1.29.0'
     }
 }
