The removal of fake views used on the shared element transition between map and stop details is now notified through EventBus (only usage of EventBus on the project I swear..)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,9 @@ dependencies {
     //WorkManager
     implementation deps.workmanager
 
+    //EventBus
+    implementation deps.eventbus
+
     //Google Play Services
     implementation deps.playServices.maps
     implementation deps.playServices.location
