--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
                     'viewPager'       : "androidx.viewpager:viewpager:1.0.0",
                     'annotation'      : "androidx.annotation:annotation:1.1.0",
                     'core'            : "androidx.core:core-ktx:1.2.0-rc01",
-                    'transition'      : "androidx.transition:transition:1.3.0-rc02",
+                    'transition'      : "androidx.transition:transition:1.3.0",
                     'test'            : "androidx.test:core-ktx:1.2.1-alpha01",
                     'jUnitRunner'     : "androidx.test.ext:junit-ktx:1.1.1-beta01",
                     'espresso'        : [
