--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         targetSdkVersion buildConfig.targetSdk
 
         applicationId "com.jorkoh.transportezaragozakt"
-        versionCode 23
-        versionName "1.1.3"
+        versionCode 24
+        versionName "1.1.4-dev"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
