--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
 
@@ -146,6 +146,7 @@ dependencies {
     implementation deps.firebase
     implementation deps.crashlytics
 
+    //LeakCanary
     debugImplementation deps.leakcanary
 
     //Testing
