--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
             compileSdk  : 29,
             targetSdk   : 29,
             minSdk      : 21,
-            gradlePlugin: '3.5.3'
+            gradlePlugin: '3.6.1'
     ]
 
     ext.deps = [
@@ -16,7 +16,7 @@ buildscript {
                     'viewPager'       : "androidx.viewpager:viewpager:1.0.0",
                     'annotation'      : "androidx.annotation:annotation:1.1.0",
                     'core'            : "androidx.core:core-ktx:1.2.0-rc01",
-                    'transition'      : "androidx.transition:transition:1.3.0",
+                    'transition'      : "androidx.transition:transition:1.3.1",
                     'test'            : "androidx.test:core-ktx:1.2.1-alpha01",
                     'jUnitRunner'     : "androidx.test.ext:junit-ktx:1.1.1-beta01",
                     'espresso'        : [
@@ -30,9 +30,9 @@ buildscript {
                             'ktx'     : "androidx.room:room-ktx:2.2.4"
                     ],
                     'navigation'      : [
-                            'runtime' : "androidx.navigation:navigation-runtime-ktx:2.2.0-rc04",
-                            'fragment': "androidx.navigation:navigation-fragment-ktx:2.2.0-rc04",
-                            'ui'      : "androidx.navigation:navigation-ui-ktx:2.2.0-rc04"
+                            'runtime' : "androidx.navigation:navigation-runtime-ktx:2.3.0-alpha02",
+                            'fragment': "androidx.navigation:navigation-fragment-ktx:2.3.0-alpha02",
+                            'ui'      : "androidx.navigation:navigation-ui-ktx:2.3.0-alpha02"
                     ],
                     'lifecycle'       : [
                             'extensions': "androidx.lifecycle:lifecycle-extensions:2.2.0",
